<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/default_size_x2">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentDetailTextViewInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_size"
        android:text="@string/fragment_detail_title"
        android:textSize="@dimen/title_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintWidth_percent="0.75"
        android:background="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/fragmentDetailTextViewInformation"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentDetailTextViewCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_size"
        android:textSize="@dimen/title_measure_item"
        android:text="@string/fragment_detail_code"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentDetailTextViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_size"
        android:textSize="@dimen/title_measure_item"
        android:text="@string/fragment_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/fragmentDetailTextViewCode"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentDetailTextViewMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_size"
        android:textSize="@dimen/title_measure_item"
        android:text="@string/fragment_detail_measure"
        app:layout_constraintTop_toBottomOf="@+id/fragmentDetailTextViewName"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentDetailTextViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_size"
        android:textSize="@dimen/title_measure_item"
        android:text="@string/fragment_detail_date"
        app:layout_constraintTop_toBottomOf="@+id/fragmentDetailTextViewMeasure"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentDetailTextViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_size"
        android:textSize="@dimen/title_measure_item"
        android:text="@string/fragment_detail_value"
        app:layout_constraintTop_toBottomOf="@+id/fragmentDetailTextViewDate"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>